2011-09-26  Chris Marrin  <cmarrin@apple.com>

        Enable requestAnimationFrame on Windows
        https://bugs.webkit.org/show_bug.cgi?id=68397

        Reviewed by Simon Fraser.

        Unskip requestAnimationFrame tests for Windows. request-animation-frame-during-modal.html
        is still skipped because it uses showModalDialog which is not supported in DRT on Windows

        * platform/win/Skipped:

2011-09-26  Ryosuke Niwa  <rniwa@webkit.org>

        editing/selection/select-bidi-run.html timeouts on non-Mac platforms
        https://bugs.webkit.org/show_bug.cgi?id=68831

        Reviewed by Enrica Casucci.

        Click at (0,0) to reset click count instead of a long leapForward.

        * editing/selection/select-bidi-run.html:

2011-09-26  Kenji Imasaki  <imasaki@chromium.org>

        [Chromium] Update the test expectaion file for media related tests.
        It includes updating bug numbers, removing
        media/video-controls-visible-audio-only.html, and unskipping
        media/media-document-audio-repaint.html.
        https://bugs.webkit.org/show_bug.cgi?id=68254

        Reviewed by David Levin.

        * platform/chromium/test_expectations.txt:

2011-09-26  Mihai Parparita  <mihaip@chromium.org>

        Remove test that no longer crashes (fixed by r95985).

        * platform/chromium/test_expectations.txt:

2011-09-26  Mike Reed  <reed@google.com>

        [skia] need rebaseline after the next skia roll -- improvements to xfermodes on gpu
        https://bugs.webkit.org/show_bug.cgi?id=68807

        Reviewed by Stephen White.

        * platform/chromium/test_expectations.txt:

2011-09-26  Simon Fraser  <simon.fraser@apple.com>

        Repaint tests don't work in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=68453

        Reviewed by Sam Weinig.
        
        Update Mac results to use the new repaint rects. Differences from old results:
	        * There are no longer invalidates from scrolling.