@@ -1,3 +1,15 @@
+2011-09-26  Tony Chang  <tony@chromium.org>
+
+        switch the initial value of flex-order to 0
+        https://bugs.webkit.org/show_bug.cgi?id=68820
+
+        The spec changed from having an initial value of 1 to 0.
+
+        Reviewed by Ojan Vafai.
+
+        * rendering/style/RenderStyle.h:
+        (WebCore::InheritedFlags::initialFlexOrder):
+
 2011-09-26  Chris Rogers  <crogers@google.com>
 
         OfflineAudioDestinationNode must wait for thread completion in uninitialize()
