@@ -1,3 +1,12 @@
+2011-09-26  Tony Chang  <tony@chromium.org>
+
+        switch the initial value of flex-order to 0
+        https://bugs.webkit.org/show_bug.cgi?id=68820
+
+        Reviewed by Ojan Vafai.
+
+        * css3/flexbox/flex-order.html:
+
 2011-09-26  Chris Marrin  <cmarrin@apple.com>
 
         Enable requestAnimationFrame on Windows
